[package]
name = "ssd1680"
version = "0.1.0"
authors = ["Jacob Rosenthal"]
categories = ["embedded", "no-std"]
description = "I2C/SPI driver for the SSD1680 eink display controller"
documentation = "https://docs.rs/ssd1680"
keywords = ["no-std", "ssd1680", "eink", "epd", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jacobrosenthal/ssd1680-rs"
edition = "2021"

[package.metadata.docs.rs]
targets = ["thumbv7m-none-eabi"]
all-features = true

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-async = { version = "0.1.0-alpha.1" }
embedded-graphics-core = { version = "0.3.3", optional = true }

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
