[package]
name = "nrf-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-traits",
] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "nrf52840",
    "gpiote",
    "time-driver-rtc1"
] }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-graphics = "0.7.1"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = "0.3.0"
embedded-hal-async = { version = "0.1.0-alpha.1" }
ssd1680 = { path = "../../" }

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
