[package]
name = "feather-express-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
embassy = { version = "0.1.0", features = ["defmt", "unstable-traits"] }
embassy-nrf = { version = "0.1.0", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "nrf52840",
    "gpiote",
    "time-driver-rtc1"
] }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-graphics = "0.7.1"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = "0.3.0"
ssd1680 = { path = "../../" }
embedded-hal-async = { version = "0.1.0-alpha.1" }

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
