[package]
name = "feather-express-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "integrated-timers",
    "nightly"
] }
embassy-util = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
    "unstable-traits"
] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "nrf52840",
    "gpiote",
    "time-driver-rtc1"
] }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
embedded-graphics = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = "0.3.0"
ssd1680 = { path = "../../" }
embedded-hal-async = { version = "0.1.0-alpha.1" }

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
